--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,49 @@
-header{
+.topbar{
     display: flex;
     flex-direction: row;
+    align-content: space-between;
+
+    top: 0;
+    position: fixed;
+
+    width: 100%;
+    height: 80px;
+
+    overflow: visible;
+
+    background-color: white;
+}
+
+.logo_header
+{
+    width: 20%;
+}
+.logo{
+    height: 50px;
+    margin: 15px 15px 15px 60px;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+
+    width: 80%;
+}
+nav ul 
+{
+    display: flex;
+    flex-direction: row;
+
+    justify-content: right;
+    margin-right: 50px;
+}
+nav li{
+    margin: 20px 10px;
+    padding: 15px 15px;
+    align-self: center;
+}
+
+li:hover
+{
+    color: darkred;
 }
