--- a/styles/header.css
+++ b/styles/header.css
@@ -2,15 +2,11 @@
     display: flex;
     flex-direction: row;
     align-content: space-between;
-
     top: 0;
     position: fixed;
-
     width: 100%;
     height: 80px;
-
     overflow: visible;
-
     background-color: white;
 }
 
@@ -28,12 +24,12 @@ nav {
     justify-content: flex-end;
 
     width: 80%;
+    margin-right: 5%;
 }
 nav ul 
 {
     display: flex;
     flex-direction: row;
-
     justify-content: right;
     margin-right: 50px;
 }
@@ -41,6 +37,12 @@ nav li{
     margin: 20px 10px;
     padding: 15px 15px;
     align-self: center;
+    color:#0065FC;
+    font-size: 20px;
+}
+
+.gras{
+    font-weight: 900;
 }
 
 li:hover
