--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ body {
 }
 .logo{
     height: 50px;
-    margin: 15px 15px 15px 60px;
+    margin: 15px 15px 15px 0px;
 }
 
 nav {
@@ -323,13 +323,6 @@ h3{
 	width: 75%;
 }
 
-.Hebergement img{
-	width: 340px;
-	height: -webkit-fill-available;
-	padding: 5px;
-	border-radius: 15px 15px 100px 100px;
-}
-
 .heb_grille{
 	display: grid;
 
@@ -341,19 +334,34 @@ h3{
 
 .heb_carte{
 	width: 350px;
-	height: 200px;
+	height: 250px;
 	background-color: white;
 	margin: 15px;
 	border-radius: 15px;
 	overflow: hidden;
-	justify-items: center;
+}
+
+.Hebergement .image{
+	width: 340px;
+	height: 250px;
+	border-radius: 10px 10px 10px 10px;
+	margin: 5px;
+	overflow: hidden;
+}
+
+.image img{
+	width: 340px;
+	height: 300px;
+	object-fit: cover;
+	position: relative;
+	top: -70px;
 }
 
 .heb_description_carte{
 	background-color: white;
 	display: block;
 	position: relative;
-	top: -80px;
+	top: -90px;
 	padding: 2% 0% 5% 5%;
 }
 
@@ -370,6 +378,7 @@ h3{
 	padding: 5px;
 	border-radius: 15px 0px 0px 15px;
 	z-index: 0;
+	object-fit: cover;
 }
 
 .Populaire {
@@ -378,7 +387,6 @@ h3{
 
 .pop_grille{
 	display: grid;
-
 	justify-items: center;
 	grid-template-rows: auto;
 	grid-gap: 20px 0%;
@@ -405,12 +413,17 @@ h3{
 	margin-left: -10%;
 }
 
+.pop_description_carte p{
+	height: 40px;
+}
+
 .pop_description_nuit {
 	display: flex;
 	flex-direction: row;
-	padding: 20% 0%;
+	padding: 10px 0% 30px;
+	height: 40px
 }
 
 .pop_avis{
-	padding-top: 10%;
+	padding-top: 0px;
 }
