--- a/styles/style.css
+++ b/styles/style.css
@@ -208,7 +208,7 @@ form button:active {
 .filtre h3 {
 	padding: 10px 20px 10px 0px;
 	font-family: "Raleway_2", serif;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 .div_filtre {
@@ -289,7 +289,7 @@ form button:active {
 
 h4{
 	font-family: "Raleway_2", serif;
-	font-size: 20px;
+	font-size: 24px;
 	padding: 25px 0 5px 40px
 }
 
@@ -336,14 +336,13 @@ h4{
 	display: grid;
 
 	justify-items: center;
-	grid-template-rows: auto;
 	grid-gap: 0px 0%;
 	grid-template-columns: repeat(3, minmax(100px, 33.3%));
 }
 
 .heb_carte{
 	width: 350px;
-	height: 250px;
+	height: 260px;
 	background-color: white;
 	margin: 15px;
 	border-radius: 15px;
@@ -403,7 +402,6 @@ h4{
 .pop_grille{
 	display: grid;
 	justify-items: center;
-	grid-template-rows: auto;
 	grid-gap: 4px 0%;
 	grid-template-columns: repeat(1, minmax(100px, 100%));
 }
@@ -446,56 +444,52 @@ h4{
 .activites {
 	padding-top: 0;
 }
+.activites h4{
+	padding: 25px 0 5px 0px;
+}
 .activites_grid {
 	display: grid;
-
-	justify-items: center;
-	grid-template-rows: auto;
-	grid-gap: 0;
+	grid-gap: 0 2%;
 	grid-template-columns: repeat(4, minmax(100px, 25%));
-	padding: 20px 0px;
+	padding: 20px 1% 10px 0px;
+	justify-items: center;
 }
 
-.act_image{
-	width: 400px;
-	height: 600px;
+.act_image , .image_2_hauteur, .image_1_hauteur{
+	width: 100%;
+	border-radius: 10px;
+	overflow: hidden;
+	margin: 0px;
 }
 
 .image_1_hauteur{
-	width: 400px;
 	height: 235px;
 	border: 1px solid #F2F2F2;
-	border-radius: 10px;
-	overflow: hidden;
-	margin: 10px 0px 28px 0px;
+	margin-bottom:28px;
 }
 
 .image_2_hauteur{
-	width: 400px;
 	height: 500px;
 	border: 1px solid #F2F2F2;
-	border-radius: 10px;
-	overflow: hidden;
-	margin-top: 10px;
 }
 
 .image_1_hauteur img{
-	width: 400px;
-	height: 250px;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	position: relative;
 	top: -35px;
 }
 
 .image_2_hauteur img{
-	width: 400px;
-	height: 500px;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 	position: relative;
 	top: -45px;
 }
 .desc_activites {
-	width: 400px;
+	width: 100%;
 	height: 40px;
 	background-color: white;
 	display: block;
@@ -503,12 +497,8 @@ h4{
 	padding: 15px 20px;
 }
 
-.image_2_hauteur .desc_activites {
+.desc_activites  {
 	top: -55px;
-}
-
-.image_1_hauteur .desc_activites {
-	top: -70px;
 }
 
 /* Footer */
@@ -516,7 +506,6 @@ footer{
 	display: grid;
 
 	justify-items: center;
-	grid-template-rows: auto;
 	grid-gap: 0;
 	grid-template-columns: repeat(3, minmax(100px, 33.3%));
 	padding: 40px 0px;
@@ -544,6 +533,15 @@ footer a {
 
 /* 4k devices (larger desktop,2560px)*/
 @media (min-width: 2560px) {
+	/* Activites */
+	.image_2_hauteur {
+		height: 600px;
+	}
+
+	.image_1_hauteur {
+		height: 280px;
+		margin-bottom: 38px;
+	}
 
 }
 
