--- a/styles/style.css
+++ b/styles/style.css
@@ -491,6 +491,9 @@ h4 {
 .activites h4 {
   padding: 25px 0 5px 0px;
 }
+.activites h4{
+	padding: 25px 0 5px 0px;
+}
 .activites_grid {
   display: grid;
   grid-gap: 0 2%;
